[package]
name = "walrus-streamer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["env"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
byteorder = "1.4"
tracing.workspace = true
sui-types.workspace = true
sui-storage = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
