[package]
name = "walrus-streamer"
version = "0.1.0"
edition = "2021"
publish = false
description = "Stream Sui checkpoint data from Walrus archival blobs"
repository = "https://github.com/Evan-Kim2028/deepbookv3-walrus-streaming"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["env"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
byteorder = "1.4"
tracing.workspace = true
sui-types.workspace = true
sui-storage = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }

[dev-dependencies]
tempfile = "3"
